# blender-sfdi

./: .gitignore  README.md  app.ipynb  blender.lnk  blender_manifest.toml  build_extension.sh  calibration.ipynb  fringe_projection.blend  fringe_projection.blend1  heightmaps.blend  heightmaps.blend1  install.lnk  install.ps1  pyproject.toml  requirements.txt  uninstall.ps1  update.ps1  update_addon.lnk
.scripts/: install.ps1  run.ps1  update_addon.ps1
blender_sfdi/: __init__.py  blender.py  blender_manifest.toml  definitions.py  devices.py  fringe_proj_ui.py  materials.py  preferences.py  properties.py  ui.py  utils.py  video.py
blender_sfdi/assets/: __init__.py  checker_board.mtl  circle_board.mtl  image_board.mtl  materials.py  meshes.py  shaders.py
blender_sfdi/operator/: projector.py
blender_sfdi/operators/: __init__.py  calibration.py  camera.py  devices.py  experiment.py  fringe_proj.py  fringe_projection.py  object.py  projector.py
blender_sfdi/properties/: __init__.py  profilometry.py
blender_sfdi/ui/: __init__.py  calibration.py  fringe_proj.py  projector.py
sfdi_addon/: __init__.py  blender.py  experiment.py  materials.py  operators.py  properties.py  ui.py  video.py
sfdi_addon/calibration/: __main__.py
sfdi_addon/operator/: __init__.py  calibration.py  camera.py  fringe_proj.py  projector.py
sfdi_addon/ui/: calibration.py  fringe_proj.py  object.py  projector.py
src/app/: __main__.py  args.py  blender.py  video.py
src/blender-sfdi/: blender.py  blender_manifest.toml
test/: __init__.py  test_something.py
(+11 files in other folders)
