[tool.poetry]
name = "blender-sfdi"
version = "0.1.0"
description = ""
authors = ["Daniel Weston <psydw2@nottingham.ac.uk>"]
readme = "README.md"
packages = [{include = "*", from="src"}]

[tool.poetry.dependencies]
python = "3.11.7"
opensfdi = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"